<resources>
    <string name="app_name">XML-Design</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="medical_app">Medical App</string>
    <string name="find_your_doctor">Find your Doctor</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="storage_your_medical_records">Storage your Medical Records</string>
    <string name="discuss_in_the_forum">Discuss in the Forum</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in_with_mobile_number">Sign in with mobile number</string>
    <string name="login_with_facebook">Login with facebook</string>
</resources>