<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/id_second_introduction_background"
    tools:context=".ui.introduction.SecondIntroductionFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_medico_logo_with_name"
                tools:ignore="ContentDescription" />
            <TextView
                android:textColor="@color/darkBlue"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:text="@string/storage_your_medical_records"/>

            <ImageView
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_second_introduction_icon"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/primary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <ImageButton
                    android:id="@+id/ibFirstIntro"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_ellipse_dot"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />
                <ImageButton
                    android:id="@+id/ibSecondIntro"
                    android:layout_marginHorizontal="5dp"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_ellipse_dot_active"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />
                <ImageButton
                    android:id="@+id/ibThirdIntro"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_ellipse_dot"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/primary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>